# mirror

./: .env.example  .gitignore  CLAUDE.md  Makefile
backend/: Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/activity/: router.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/chat/: engine.py  manager.py  router.py  schemas.py
backend/app/chat/flows/: base.py  check_in.py  crisis.py  program.py  reframe.py  registry.py  tiny_habit.py  values.py
backend/app/chat/llm/: client.py
backend/app/dashboard/: router.py  schemas.py  service.py
backend/app/journal/: router.py
backend/app/models/: __init__.py  activity.py  base.py  check_in.py  conversation.py  energy.py  habit.py  homework.py  inferred_state.py  journal.py  life_area.py  notification.py  pattern.py  program.py  protocol.py  screening.py  suggestion.py  thought_record.py  user.py
backend/app/notifications/: router.py  service.py
backend/app/protocols/: anxiety.py  base.py  behavioral_activation.py  cbt_depression.py  registry.py
backend/app/psychology/: cbt.py  energy.py  life_areas.py  patterns.py  router.py  severity.py  state_inference.py  suggestions.py  tiny_habits.py
backend/app/screening/: delivery.py  instruments.py  router.py
backend/app/sessions/: engine.py  homework.py  router.py
backend/app/tasks/: reminders.py  scheduler.py  screening_triggers.py
backend/tests/: conftest.py
backend/tests/test_auth/: test_auth.py
backend/tests/test_chat/: test_engine.py
backend/tests/test_chat/test_flows/: test_check_in.py  test_crisis.py
backend/tests/test_dashboard/: test_dashboard.py
backend/tests/test_integration/: test_full_protocol_flow.py
backend/tests/test_models/: test_new_models.py
backend/tests/test_notifications/: test_router.py  test_service.py
backend/tests/test_protocols/: test_base.py  test_cbt.py  test_registry.py
backend/tests/test_psychology/: test_cbt.py  test_energy.py  test_patterns.py  test_state_inference.py  test_suggestions.py  test_tiny_habits.py
backend/tests/test_screening/: test_delivery.py  test_instruments.py  test_router.py  test_severity.py
backend/tests/test_sessions/: test_engine.py  test_homework.py  test_mid_protocol.py  test_router.py
backend/tests/test_tasks/: test_reminders.py  test_screening_triggers.py
cli/: pyproject.toml
cli/mirror_cli/: api_client.py  chat.py  main.py
docs/: api-reference.md  architecture.md  improvement-plan.md  proactive-psychology-engine.md  self-improvement.md  (+3 more)
(+39 files in other folders)
