[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror"
version = "0.1.0"
description = "Mirror - Psychologically intelligent personal growth platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "beanie>=2.0",
    "motor>=3.7",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "APScheduler>=3.10",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mongomock-motor>=0.0.34",
    "freezegun>=1.3",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
