[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-cli"
version = "0.1.0"
description = "Mirror CLI - Terminal client for Mirror personal growth platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "websockets>=13.0",
]

[tool.setuptools.packages.find]
include = ["mirror_cli*"]

[project.scripts]
mirror = "mirror_cli.main:app"
